--- a/views/new_list.erb
+++ b/views/new_list.erb
@@ -9,6 +9,6 @@
   </dl>
   <fieldset class="actions">
     <input type="submit" value="Save">
-    <a href="/lists">Cancel</a>
+    <a href="<%== BASE_URL %>/lists">Cancel</a>
   </fieldset>
 </form>
