--- a/views/edit_list.erb
+++ b/views/edit_list.erb
@@ -22,6 +22,6 @@
   </dl>
   <fieldset class="actions">
     <input type="submit" value="Save">
-    <a href="/lists/<%= params[:id] %>">Cancel</a>
+    <a href="<%= BASE_URL %>/lists/<%= params[:id] %>">Cancel</a>
   </fieldset>
 </form>
