--- a/views/list.erb
+++ b/views/list.erb
@@ -8,12 +8,12 @@
           <button class="check" type="submit">Complete All</button>
         </form>
       </li>
-      <li><a class="edit" href="/lists/<%= @list_id %>/edit">Edit List</a></li>
+      <li><a class="edit" href="<%= BASE_URL %>/lists/<%= @list_id %>/edit">Edit List</a></li>
     </ul>
   </header>
 
   <ul>
-    <% sort_todos(@list[:todos]) do |todo| %>
+    <% sort_todos(@todos) do |todo| %>
       <% if todo[:completed] %>
         <li class="complete">
       <% else %>
@@ -47,5 +47,5 @@
 </form>
 
 <% content_for :header_links do %>
-  <a class="list" href="/lists">All Lists</a>
+  <a class="list" href="<%= BASE_URL %>/lists">All Lists</a>
 <% end %>
