--- a/views/list.erb
+++ b/views/list.erb
@@ -4,7 +4,7 @@
     <h2><%= @list[:name] %></h2>
     <ul>
       <li>
-        <form action="/lists/<%= @list_id %>/complete_all" method="post">
+        <form action="<%== BASE_URL %>/lists/<%= @list_id %>/complete_all" method="post">
           <button class="check" type="submit">Complete All</button>
         </form>
       </li>
@@ -19,12 +19,12 @@
       <% else %>
         <li>
       <% end %>
-        <form action="/lists/<%= @list_id %>/todos/<%= todo[:id] %>" method="post" class="check">
+        <form action="<%== BASE_URL %>/lists/<%= @list_id %>/todos/<%= todo[:id] %>" method="post" class="check">
           <input type="hidden" name="completed" value="<%= !todo[:completed] %>" />
           <button type="submit">Complete</button>
         </form>
         <h3><%= todo[:name] %></h3>
-        <form action="/lists/<%= @list_id %>/todos/<%= todo[:id] %>/destroy" method="post" class="delete">
+        <form action="<%== BASE_URL %>/lists/<%= @list_id %>/todos/<%= todo[:id] %>/destroy" method="post" class="delete">
           <button type="submit">Delete</button>
         </form>
       </li>
@@ -32,7 +32,7 @@
   </ul>
 </section>
 
-<form action="/lists/<%= @list_id %>/todos" method="post">
+<form action="<%== BASE_URL %>/lists/<%= @list_id %>/todos" method="post">
   <dl>
     <dt>
       <label for="todo">Enter a new todo item:</label>
