--- a/views/new_list.erb
+++ b/views/new_list.erb
@@ -1,4 +1,4 @@
-<form action="/lists" method="post">
+<form action="<%== BASE_URL %>/lists" method="post">
   <dl>
     <dt>
       <label for="list_name">Enter the name for your new list:</label>
