--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Todo App</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="<%== BASE_URL %>//fonts.googleapis.com/css?family=PT+Sans">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Sans">
     <link rel="stylesheet" href="<%== BASE_URL %>/stylesheets/whitespace-reset.css">
     <link rel="stylesheet" href="<%== BASE_URL %>/stylesheets/application.css">
     <script src="<%== BASE_URL %>/javascripts/jquery-2.1.4.js"></script>
